2009-03-28  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.0
	* DVB-S support added
	* Updates to scan window UI to be more DVB-S friendly
	* Removed support for Profiles (not used)
	* Rewrote database tier so data access is more consistent
	* EPG fix where some events not displaying
	* Finally fixed mute on restore when using xine engine 
	* Added a database version check

2009-03-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.16
	* Fix so to increase the granularity of the GTK EPG widget
	* Small performance fixes

2009-02-20  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.15
	* Added support for 2 tuner devices
	* Fixed a performance issue where the EPG was causing temporary lockups

2009-02-11  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.14
	* Fix so that minimise mode does not crash
	* Fix so that status icon shows current event
	* Compatibility changes for 2.6.29 kernel
	* ATSC support! (but not for scanning)

2009-02-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.13
	* Removed my email address from the application
	* Fixed performance issue when calling data.vacuum()

2009-02-07  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.12
	* EPG events are now stored in memory to conserve disk access, written periodically and on exit
	* Added option to compile in libvlc, libxine, libgstreamer and mplayer engines 

2009-01-26  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.11
	* Fixed issue with incorrect initialisation of application_dir
	* Deleting old events periodically
	* Vacuuming database periodically
	* Fixed issue were EPG had gaps if start_time was now
	* Fixed issue with application terminating on main_window hide

2009-01-18  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.10
	* Added dynamically loaded VLC based engine
	* Persistent window geometry
	* Added option for hiding status_icon

2009-01-04  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.7.9
	* Fixed issue with man page not being included in dist