@@ -8,6 +8,7 @@
 	* EPG fix where some events not displaying
 	* Finally fixed mute on restore when using xine engine 
 	* Added a database version check
+	* Audio streams now work
 
 2009-03-01  Michael Lamothe <michael.lamothe@gmail.com>
 
